<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_hide">
        <menu>
            <item
                android:id="@+id/inline_hooks_selected_only"
                android:checkable="true"
                android:title="@string/inline_hooks_selected_only" />
            <item
                android:id="@+id/item_filter_system"
                android:checkable="true"
                android:checked="true"
                android:title="@string/menu_show_system_apps" />
        </menu>
    </item>
    <item android:title="@string/menu_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/item_sort_by_name" android:checked="true" android:title="@string/sort_by_name" />
                <item android:id="@+id/item_sort_by_package_name" android:title="@string/sort_by_package_name" />
                <item android:id="@+id/item_sort_by_install_time" android:title="@string/sort_by_install_time" />
                <item android:id="@+id/item_sort_by_update_time" android:title="@string/sort_by_update_time" />
            </group>
            <item android:id="@+id/reverse" android:checkable="true" android:title="@string/sort_reverse" />
        </menu>
    </item>
</menu>
