<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of LSPosed.
  ~
  ~ LSPosed is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ LSPosed is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ Copyright (C) 2020 EdXposed Contributors
  ~ Copyright (C) 2021 LSPosed Contributors
  -->

<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/group_network">

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_dns_24"
            android:key="doh"
            android:summary="@string/dns_over_http_summary"
            android:title="@string/dns_over_http" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_language">

        <rikka.preference.SimpleMenuPreference
            android:defaultValue="SYSTEM"
            android:icon="@drawable/ic_outline_language_24"
            android:key="language"
            android:popupMenuStyle="@style/Widget.LSPosed.Miuix.SimpleMenuPopup"
            android:popupTheme="@style/ThemeOverlay.LSPosed.Miuix.PopupMenu"
            android:summary="%s"
            android:title="@string/settings_language"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Preference
            android:icon="@drawable/ic_outline_groups_24"
            android:key="translation_contributors"
            android:title="@string/settings_translation_contributors"
            app:enableCopying="true" />

        <Preference
            android:icon="@drawable/ic_outline_translate_24"
            android:key="translation"
            android:title="@string/settings_translation" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_group_theme">
        <rikka.preference.SimpleMenuPreference
            android:defaultValue="MIUIX"
            android:entries="@array/ui_style_texts"
            android:entryValues="@array/ui_style_values"
            android:icon="@drawable/ic_outline_grid_view_24"
            android:key="ui_style"
            android:popupMenuStyle="@style/Widget.LSPosed.Miuix.SimpleMenuPopup"
            android:popupTheme="@style/ThemeOverlay.LSPosed.Miuix.PopupMenu"
            android:summary="%s"
            android:title="@string/ui_style" />

        <Preference
            android:icon="@drawable/ic_outline_palette_24"
            android:key="theme_settings"
            android:summary="@string/settings_theme_settings_summary"
            android:title="@string/settings_theme_settings"
            android:widgetLayout="@layout/view_preference_chevron" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_group_bottom_bar"
        android:title="@string/settings_group_bottom_bar">
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_blur_on_24"
            android:key="enable_blur"
            android:summary="@string/settings_enable_blur_summary"
            android:title="@string/settings_enable_blur" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_floating_bar_24"
            android:key="floating_bottom_bar"
            android:summary="@string/settings_floating_bottom_bar_summary"
            android:title="@string/settings_floating_bottom_bar" />
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:dependency="floating_bottom_bar"
            android:icon="@drawable/ic_outline_floating_bar_blur_24"
            android:key="floating_bottom_bar_blur"
            android:summary="@string/settings_floating_bottom_bar_blur_summary"
            android:title="@string/settings_floating_bottom_bar_blur" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_group_framework">
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_speaker_notes_24"
            android:key="disable_verbose_log"
            android:persistent="false"
            android:summary="@string/settings_disable_verbose_log_summary"
            android:title="@string/settings_disable_verbose_log" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_outline_shield_24"
            android:key="enable_dex_obfuscate"
            android:persistent="false"
            android:summary="@string/settings_xposed_api_call_protection_summary"
            android:title="@string/settings_xposed_api_call_protection" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_notifications_24"
            android:key="enable_status_notification"
            android:persistent="false"
            android:shouldDisableView="false"
            android:summary="@string/settings_enable_status_notification_summary"
            android:title="@string/settings_enable_status_notification" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_group_repo">
        <rikka.preference.SimpleMenuPreference
            android:defaultValue="CHANNEL_STABLE"
            android:entries="@array/update_channel_texts"
            android:entryValues="@array/update_channel_values"
            android:icon="@drawable/ic_round_update_24"
            android:key="update_channel"
            android:popupMenuStyle="@style/Widget.LSPosed.Miuix.SimpleMenuPopup"
            android:popupTheme="@style/ThemeOverlay.LSPosed.Miuix.PopupMenu"
            android:summary="%s"
            android:title="@string/settings_update_channel" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_backup_and_restore">
        <Preference
            android:icon="@drawable/ic_baseline_settings_backup_restore_24"
            android:key="backup"
            android:summary="@string/settings_backup_summery"
            android:title="@string/settings_backup" />
        <Preference
            android:icon="@drawable/ic_outline_restore_24"
            android:key="restore"
            android:summary="@string/settings_restore_summery"
            android:title="@string/settings_restore" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_group_system"
        android:title="@string/settings_group_system"
        app:isPreferenceVisible="@bool/show_system_settings">
        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            android:enabled="false"
            android:icon="@drawable/ic_outline_visibility_24"
            android:key="show_hidden_icon_apps_enabled"
            android:persistent="false"
            android:summary="@string/settings_show_hidden_icon_apps_enabled_summary"
            android:title="@string/settings_show_hidden_icon_apps_enabled" />
    </PreferenceCategory>
</PreferenceScreen>
